# MathAnimation

./: CMakeLists.txt
.github/workflows/: macos-build.yml
Animations/: CMakeLists.txt
Animations/include/: core.h
Animations/include/core/: Serialization.hpp
Animations/include/editor/panels/: CodeEditorPanel.h
Animations/include/math/: DataStructures.h
Animations/include/parsers/: Grammar.h  SyntaxTheme.h
Animations/include/svg/: Styles.h
Animations/src/: SingleIncludeImpls.cpp
Animations/src/animation/: Animation.cpp
Animations/src/audio/: Audio.cpp
Animations/src/core/: Application.cpp  ProjectApp.cpp
Animations/src/editor/panels/: CodeEditorPanel.cpp
Animations/tests/: AnimationManagerTests.h  SyntaxHighlighterTests.h  SyntaxThemeTests.h  main.cpp
